# eth-protocol-fellowship

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  pyproject.toml  zensical.toml
.gemini/: config.yaml  styleguide.md
.github/: copilot-instructions.md  dependabot.yml  settings.yml
.github/workflows/: docs.yml
docs/: about.md  index.md  project.md
docs/stylesheets/: brand.css
overrides/: 404.html  main.html
overrides/partials/: copyright.html
tests/: test_atomic.py  test_check_jsonld.py  test_config.py  test_llms_txt.py  test_sitemap_merge.py
tools/: _atomic.py  _config.py  check_jsonld.py  llms.head.md  llms_txt.py  sitemap_merge.py  social_card.py
tools/fonts/: README.md
updates/: 2026-06-17-week-0.md  2026-06-22-week-1.md  index.md  week-0.md
